# qtchess

./: .gitignore  CMakeLists.txt  QtChess.files
src/: common.hpp  main.cpp  piece-set.cpp  piece-set.hpp
src/engine/: engine-config.cpp  engine-config.hpp  engine-option.cpp  engine-option.hpp  engine.cpp  engine.hpp  variant-info.cpp  variant-info.hpp
src/game/: board.cpp  board.hpp  move.cpp  move.hpp  piece-set.cpp  piece-set.hpp  pieces.cpp  pieces.hpp  player.cpp  player.hpp  position.cpp  position.hpp  state.cpp  state.hpp  tree.cpp  tree.hpp
src/gui/: color-button.cpp  color-button.hpp  engine-list-widget.cpp  engine-list-widget.hpp  main-window.cpp  main-window.hpp  move-tree-widget.cpp  move-tree-widget.hpp  promotion-dialog.cpp  promotion-dialog.hpp
src/gui/board/: board-widget-state.cpp  board-widget-state.hpp  board-widget.cpp  board-widget.hpp
src/gui/engine/: engine-selection-dialog.cpp  engine-selection-dialog.hpp  engine-widget.cpp  engine-widget.hpp
src/gui/forms/: engine-edit-dialog.ui  engine-widget.ui  main-window.ui
src/gui/settings/: engine-edit-dialog.cpp  engine-edit-dialog.hpp  engine-edit-options-dialog.cpp  engine-edit-options-dialog.hpp  engine-settings-dialog.cpp  (+3 more)
src/settings/: abstract-settings.cpp  abstract-settings.hpp  board-settings.cpp  board-settings.hpp  engines-settings.cpp  engines-settings.hpp  html-settings.cpp  html-settings.hpp  layout-settings.cpp  layout-settings.hpp  settings-factory.hpp
src/util/: html-move-tree-builder.cpp  html-move-tree-builder.hpp  stringify.cpp  stringify.hpp  widgets.cpp  widgets.hpp
